<resources>
    <string name="app_name">MyTube</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_shorts">Shorts</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_library">Library</string>
    <string name="title_create">Create</string>
    <string name="action_cast">Cast</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_search">Search</string>
    <string name="action_account">Account</string>
    <string name="mytube_sign_in_title">Do more with MyTube</string>
    <string name="mytube_sign_in_body">Sign in now to upload, save, and comment on videos</string>
    <string name="sign_in">Sign in</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="settings">Settings</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="upload">Upload a video</string>
    <string name="go_live">Go live</string>
    <string name="create_content_description">Open menu to upload new video or start a livestream</string>
    <string name="bullet_point">•</string>
</resources>