<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_stories"
        android:icon="@drawable/ic_stories_24"
        android:title="@string/title_stories" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create_24"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_subscriptions_24"
        android:title="@string/title_subscriptions" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library_24"
        android:title="@string/title_library" />
</menu>