<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cast"
        android:title="@string/action_cast"
        android:icon="@drawable/ic_cast_24"
        app:showAsAction="always"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/action_notifications"
        android:title="@string/action_notifications"
        android:icon="@drawable/ic_notifications_24"
        app:showAsAction="always"
        android:orderInCategory="1" />
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_24"
        app:showAsAction="always"
        android:orderInCategory="2" />
    <item
        android:id="@+id/action_account"
        android:title="@string/action_account"
        android:icon="@drawable/ic_account_circle_24"
        app:showAsAction="always"
        android:orderInCategory="3" />
</menu>
